Fixes #2 (Left menu nav items overflow into content area)

--- a/_sass/doc.scss
+++ b/_sass/doc.scss
@@ -579,6 +579,7 @@
 }
 
 .affix,
+.affix-top,
 .affix-bottom {
   width: 230px;
 }
